k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-app
  labels:
    name: cloud-app
