k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
  namespace: cloud-app
  labels:
    app: cloud-app
spec:
  type: ClusterIP
  selector:
    app: cloud-app
  ports:
    - name: http
      port: 80
      targetPort: http
